Added Static/ to html
+ tog bort index (tom)
+ la till bottle.py
+ ändrade informationen i bottle.py

--- a/views/Krisislogin.html
+++ b/views/Krisislogin.html
@@ -4,7 +4,7 @@
 <head>
      <meta charset="utf-8">
      <title> Logga in eller registrera dig</title>
-     <link rel="stylesheet" href="stylekrisislogin.css">
+     <link rel="stylesheet" href="static/stylekrisislogin.css">
      <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
