--- a/views/krisisinlagg.html
+++ b/views/krisisinlagg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min Hemsida</title>
-    <link rel="stylesheet" href="static/krisisinlagg.css">
+    <link rel="stylesheet" href="/static/krisisinlagg.css">
 </head>
 <body>
     <!-- Navigation -->
