--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,36 @@
 </head>
 
 <body>
+    <!--BootStrap NavBar-->
+    <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body p-3" data-bs-theme="dark">
+        <div class="container d-md-flex justify-content-end">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="#">Logga</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="#">Krishantering</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="#">Publicera inlägg</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="#">Logga in</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+
+
+    <!--
     <nav class="fixed-top">
         <div class="container-fluid d-flex justify-content-evenly">
             <div class="container text-center">
@@ -37,8 +66,7 @@
         </div>
     </nav>
     <a class="d-flex justify-content-center" href="index.html"><img id="logo" src="../static/Logo_big.png" alt="Logga Krisklar"></a>
-
-
+-->
 
 
 
