--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="#">Logga</a>
+                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="#">Logga
+                            Krisklar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="#">Krishantering</a>
@@ -39,6 +40,127 @@
         </div>
     </nav>
 
+    <main>
+        <div class="container-md mb-5">
+            <div class="row">
+                <!--Filters-->
+                <aside class="col-4" id="aside_index">
+                    <h3 class="mt-4 text-center">Filtrering</h3>
+                    <form action="">
+                        <p class="text-center">Plats</p>
+                        <p class="text-center">Kategori</p>
+                        <h4 class="mt-2 text-center">Källa</h4>
+                        <!--Bootstrap checkbox, switch-->
+                        <div class="form-check form-switch d-flex justify-content-center">
+                            <input class="form-check-input me-2" type="checkbox" id="flexSwitchCheckDefault">
+                            <label class="form-check-label" for="flexSwitchCheckDefault"> Polisen.se</label>
+                        </div>
+                        <!--Bootstrap checkbox, switch-->
+                        <div class="form-check form-switch d-flex justify-content-center mt-2">
+                            <input class="form-check-input me-2" type="checkbox" id="flexSwitchCheckDefault">
+                            <label class="form-check-label" for="flexSwitchCheckDefault"> KrisKlar.se</label>
+                        </div>
+                        <div class="d-flex justify-content-center mt-4">
+                            <input type="submit" class="btn btn-dark" value="Hitta händelser">
+                        </div>
+                    </form>
+                </aside>
+
+
+
+                <!--Events-->
+                <div class="col-8">
+                    <h1 class="ms-4 mt-4">Händelser</h1>
+                    <!--Post-->
+                    <div class="card mx-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Krisrubrik</h5>
+                            <div class="row">
+                                <div class="col-lg-7 col-md-8">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
+                                        aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!</p>
+                                </div>
+                                <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                    <img id="icon-post" class="img-thumbnail rounded-circle"
+                                        src="https://picsum.photos/200/300" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer small text-muted">
+                            Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                        </div>
+                    </div>
+                    <!--Post-->
+                    <div class="card mx-4 mt-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Krisrubrik</h5>
+                            <div class="row">
+                                <div class="col-lg-7 col-md-8">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
+                                        dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
+                                </div>
+                                <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                    <img id="icon-post" class="img-thumbnail rounded-circle"
+                                        src="https://picsum.photos/208/300" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer small text-muted">
+                            Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                        </div>
+                    </div>
+                    <!--Post-->
+                    <div class="card mx-4 mt-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Krisrubrik</h5>
+                            <div class="row">
+                                <div class="col-lg-7 col-md-8">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
+                                        dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
+                                </div>
+                                <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                    <img id="icon-post" class="img-thumbnail rounded-circle"
+                                        src="https://picsum.photos/218/300" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer small text-muted">
+                            Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                        </div>
+                    </div>
+                    <!--Post-->
+                    <div class="card mx-4 mt-4">
+                        <div class="card-body">
+                            <h5 class="card-title">Krisrubrik</h5>
+                            <div class="row">
+                                <div class="col-lg-7 col-md-8">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
+                                        dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
+                                </div>
+                                <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                    <img id="icon-post" class="img-thumbnail rounded-circle"
+                                        src="https://picsum.photos/208/340" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer small text-muted">
+                            Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+
+
+
+    <footer class="footer bg-dark p-3" data-bs-theme="dark">
+        <div class="container">
+            <span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span>
+        </div>
+    </footer>
 
 
     <!--
