--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,14 +1,8 @@
-nav {
-    background-image: url(../static/asphalt.jpg);
-    z-index: 1 !important;
-    background-color: rgb(0, 0, 0);
-
+#icon-post {
+    height: 100px;
+    width: 100px;
+    object-fit: cover;
 }
-
-a {
-    text-decoration: none;
-}
-#logo {
-    width: 330px ;
-    z-index: 10 !important;
+#aside_index {
+    background-color: rgb(217, 213, 207);
 }
