--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -6,3 +6,13 @@
 #aside_index {
     background-color: rgb(217, 213, 207);
 }
+
+.widht-select {
+    width: 15vw;
+}
+
+#map {
+    height: 50vh;
+    width: 25vw;
+    background-color: rgb(68, 55, 46);
+}
