--- a/views/index.html
+++ b/views/index.html
@@ -43,15 +43,39 @@
     <main>
         <div class="container-md mb-5">
             <div class="row">
-                <!--Filters-->
+                <!--Filters, form-->
                 <aside class="col-4" id="aside_index">
                     <h3 class="mt-4 text-center">Filtrering</h3>
+                    <hr>
                     <form action="">
-                        <p class="text-center">Plats</p>
-                        <p class="text-center">Kategori</p>
+                        <label class="d-flex justify-content-center text-center" for="position">
+                            <h6>Plats</h6>
+                        </label>
+                        <select name="position" id="position" class="form-select widht-select mx-auto mt-0 mb-3">
+                            <option value="none" selected>Välj...</option>
+                            <option value="Malmö">Malmö</option>
+                            <option value="Lund">Lund</option>
+                            <!--
+                                Python:
+                                for i in cities print <option value="i">i</option>?
+                            -->
+                        </select>
+                        <label class="d-flex justify-content-center text-center" for="risk">
+                            <h6>Riskkategori</h6>
+                        </label>
+                        <select name="risk" id="risk" class="form-select widht-select mx-auto mt-2 mb-3">
+                            <option value="none" selected>Välj...</option>
+                            <option value="Fire">Brand</option>
+                            <option value="Shooting">Skottlossning</option>
+                            <option value="Smoke">Rökutveckling</option>
+                            <!--
+                                Python:
+                                for i in cities print <option value="i">i</option>?
+                            -->
+                        </select>
                         <h4 class="mt-2 text-center">Källa</h4>
                         <!--Bootstrap checkbox, switch-->
-                        <div class="form-check form-switch d-flex justify-content-center">
+                        <div class="form-check form-switch d-flex justify-content-center mt-3">
                             <input class="form-check-input me-2" type="checkbox" id="flexSwitchCheckDefault">
                             <label class="form-check-label" for="flexSwitchCheckDefault"> Polisen.se</label>
                         </div>
@@ -64,6 +88,11 @@
                             <input type="submit" class="btn btn-dark" value="Hitta händelser">
                         </div>
                     </form>
+                    <hr>
+                    <h3 class="mt-4 text-center">Karta</h3>
+                    <div id="map" class="mx-auto mt-4">
+                        <!--API Google Maps-->
+                    </div>
                 </aside>
 
 
