--- a/views/index.html
+++ b/views/index.html
@@ -44,7 +44,7 @@
         <div class="container-md mb-5">
             <div class="row">
                 <!--Filters, form-->
-                <aside class="col-4" id="aside_index">
+                <aside class="col-sm-4" id="aside_index">
                     <h3 class="mt-4 text-center">Filtrering</h3>
                     <hr>
                     <form action="">
@@ -84,21 +84,21 @@
                             <input class="form-check-input me-2" type="checkbox" id="flexSwitchCheckDefault">
                             <label class="form-check-label" for="flexSwitchCheckDefault"> KrisKlar.se</label>
                         </div>
-                        <div class="d-flex justify-content-center mt-4">
+                        <div class="d-flex justify-content-center mt-4 mb-4">
                             <input type="submit" class="btn btn-dark" value="Hitta händelser">
                         </div>
                     </form>
-                    <hr>
-                    <h3 class="mt-4 text-center">Karta</h3>
-                    <div id="map" class="mx-auto mt-4">
-                        <!--API Google Maps-->
+                    <div class="d-none d-sm-block">
+                        <hr>
+                        <h3 class="mt-4 text-center">Karta?</h3>
+                        <div id="map" class="mx-auto mt-4">
+                            <!--API Google Maps-->
+                        </div>
                     </div>
                 </aside>
 
-
-
                 <!--Events-->
-                <div class="col-8">
+                <div class="col-sm-8">
                     <h1 class="ms-4 mt-4">Händelser</h1>
                     <!--Post-->
                     <div class="card mx-4">
@@ -186,40 +186,14 @@
 
 
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
-        <div class="container">
-            <span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-2"><span class="mb-3 mb-md-0 text-body-secondary">© 2024 KrisKlar</span></div>
+                <div class="col-10"></div>
+            </div>
+
         </div>
     </footer>
-
-
-    <!--
-    <nav class="fixed-top">
-        <div class="container-fluid d-flex justify-content-evenly">
-            <div class="container text-center">
-                <div class="row p-5">
-                    <div class="col">
-                        <a class="row p-3" href="">Krishantering</a>
-                    </div>
-                    <div class="col">
-                        <a class="row p-3" href="">Inlägg från polisen</a>
-                    </div>
-                    <div class="col">
-                        
-                    </div>
-                    <div class="col">
-                        <a class="row p-3" href="">Publicera inlägg</a>
-                    </div>
-                    <div class="col">
-                        <a class="row p-3" href="">Logga in</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <a class="d-flex justify-content-center" href="index.html"><img id="logo" src="../static/Logo_big.png" alt="Logga Krisklar"></a>
--->
-
-
 
     <!--BootstrapJS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
