--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -3,6 +3,7 @@
     width: 100px;
     object-fit: cover;
 }
+
 #aside_index {
     background-color: rgb(217, 213, 207);
 }
@@ -15,4 +16,11 @@
     height: 50vh;
     width: 25vw;
     background-color: rgb(68, 55, 46);
+}
+
+@media screen and (max-width: 576px) {
+    .widht-select {
+        width: 50vw;
+    }
+
 }
