--- a/views/index.html
+++ b/views/index.html
@@ -26,13 +26,13 @@
                         <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="index.html">Hem</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="#">Krishantering</a>
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="chrisis_tips.html">Krishantering</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="publish_post.html">Publicera inlägg</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="#">Logga in</a>
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="login.html">Logga in</a>
                     </li>
                 </ul>
             </div>
@@ -42,26 +42,27 @@
     <main class="container-md mb-5">
         <div class="row">
             <!--Filters, form-->
-            <aside class="col-sm-4" id="aside_index">
+            <aside class="col-md-3" id="aside_index">
                 <h3 class="mt-4 text-center">Filtrering</h3>
                 <hr>
                 <form action="">
-                    <label class="d-flex justify-content-center text-center" for="position">
+                    <label class="d-flex justify-content-center text-center" for="city">
                         <h6>Plats</h6>
                     </label>
-                    <select name="position" id="position" class="form-select widht-select mx-auto mt-0 mb-3">
+                    <select name="city" id="city" class="form-select widht-select mx-auto mt-0 mb-3">
                         <option value="none" selected>Välj...</option>
                         <option value="Malmö">Malmö</option>
                         <option value="Lund">Lund</option>
+                        <option value="Karlshamn">Karlshamn</option>
                         <!--
                                 Python:
                                 for i in cities print <option value="i">i</option>?
                             -->
                     </select>
-                    <label class="d-flex justify-content-center text-center" for="risk">
+                    <label class="d-flex justify-content-center text-center" for="category">
                         <h6>Riskkategori</h6>
                     </label>
-                    <select name="risk" id="risk" class="form-select widht-select mx-auto mt-2 mb-3">
+                    <select name="category" id="category" class="form-select widht-select mx-auto mt-2 mb-3">
                         <option value="none" selected>Välj...</option>
                         <option value="Fire">Brand</option>
                         <option value="Shooting">Skottlossning</option>
@@ -86,7 +87,7 @@
                         <input type="submit" class="btn btn-dark" value="Hitta händelser">
                     </div>
                 </form>
-                <div class="d-none d-sm-block">
+                <div class="d-none d-md-block">
                     <hr>
                     <h3 class="mt-4 text-center">Karta?</h3>
                     <div id="map" class="mx-auto mt-4">
@@ -96,7 +97,7 @@
             </aside>
 
             <!--Events-->
-            <div class="col-sm-8">
+            <div class="col-md-9 col-sm-12">
                 <h1 class="ms-4 mt-4">Händelser</h1>
                 <!--Post-->
                 <div class="card mx-4">
