--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hem</title>
+    <title>Publicera inlägg</title>
     <!--BootstrapCSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -26,31 +26,83 @@
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="index.html">Hem</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="#">Krishantering</a>
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="chrisis_tips.html">Krishantering</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page"
                             href="publish_post.html">Publicera inlägg</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="#">Logga in</a>
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="login.html">Logga in</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <main class="container-md mb-5">
-        <div class="col-sm-8">
-        <form action="">
-        </form>
+    <main class="container-md">
+        <div class="row">
+            <!--Contains background-image-->
+            <aside class="col-sm-3 bg-img">
+            </aside>
+            <div class="col-sm-9">
+                <h1 class="ms-4 mt-4">Publicera ett inlägg</h1>
+                <hr>
+                <!--Form-->
+                <form action="">
+                    <label for="category">
+                        <h3 class="ms-4 mt-2">Kriskategori</h3>
+                    </label>
+                    <select name="category" id="category" class="form-select widht-select ms-4 mt-1 mb-3">
+                        <option value="none" selected>Välj...</option>
+                        <option value="Fire">Brand</option>
+                        <option value="Shooting">Skottlossning</option>
+                        <option value="Smoke">Rökutveckling</option>
+                        <!--
+                                Python:
+                                for i in cities print <option value="i">i</option>?
+                            -->
+                    </select>
+                    <div class="row">
+                        <div class="col-3">
+                            <label for="city">
+                                <h3 class="ms-4 mt-2">Stad</h3>
+                            </label>
+                            <select name="city" id="city" class="form-select widht-select ms-4 mt-1 mb-3">
+                                <option value="none" selected>Välj...</option>
+                                <option value="Malmö">Malmö</option>
+                                <option value="Lund">Lund</option>
+                                <option value="Karlshamn">Karlshamn</option>
+                            </select>
+                        </div>
+                        <div class="col-9">
+                            <label for="ZIP-code">
+                                <h3 class="ms-4 mt-2">Postnummer</h3>
+                            </label>
+                            <select name="ZIP-code" id="ZIP-code" class="form-select widht-select ms-4 mt-1 mb-3">
+                                <option value="none" selected>Välj...</option>
+                                <option value="21110">211 10</option>
+                                <option value="21111">211 11</option>
+                                <option value="21112">211 12</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-check ms-4 mt-2">
+                        <input class="form-check-input" type="checkbox" value="" id="confirmation" required>
+                        <label class="form-check-label" for="confirmation">
+                            Den information som jag har uppgett är sanningsenlig
+                        </label>
+                    </div>
+
+                    <input type="submit" class="btn btn-dark ms-4 mt-4 mb-4" value="Publicera händelse">
+
+                </form>
+            </div>
         </div>
-        <aside class="col-sm-4 bg-img">
-        </aside>
 
 
 
-    </main >
+    </main>
     <!--Footer-->
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
         <div class="container-fluid">
