img class="img-thumbnail rounded-circle icon-post"

--- a/views/index.html
+++ b/views/index.html
@@ -109,7 +109,7 @@
                                         aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!</p>
                                 </div>
                                 <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                    <img class="icon-post" class="img-thumbnail rounded-circle"
+                                    <img class="img-thumbnail rounded-circle icon-post"
                                         src="https://picsum.photos/200/300" alt="">
                                 </div>
                             </div>
@@ -128,7 +128,7 @@
                                         dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
                                 </div>
                                 <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                    <img class="icon-post" class="img-thumbnail rounded-circle"
+                                    <img class="img-thumbnail rounded-circle icon-post"
                                         src="https://picsum.photos/208/300" alt="">
                                 </div>
                             </div>
@@ -147,7 +147,7 @@
                                         dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
                                 </div>
                                 <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                    <img class="icon-post" class="img-thumbnail rounded-circle"
+                                    <img class="img-thumbnail rounded-circle icon-post
                                         src="https://picsum.photos/218/300" alt="">
                                 </div>
                             </div>
@@ -166,7 +166,7 @@
                                         dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
                                 </div>
                                 <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                    <img class="icon-post" class="img-thumbnail rounded-circle"
+                                    <img class="img-thumbnail rounded-circle icon-post
                                         src="https://picsum.photos/208/340" alt="">
                                 </div>
                             </div>
