--- a/views/chrisis_tips.html
+++ b/views/chrisis_tips.html
@@ -26,7 +26,8 @@
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="index.html">Hem</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" href="chrisis_tips.html" aria-current="page">Krishantering</a>
+                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" href="chrisis_tips.html"
+                            aria-current="page">Krishantering</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" aria-current="page"
@@ -40,7 +41,95 @@
         </div>
     </nav>
 
-    <main class="container-md">
+    <main class="container-md mt-4 mb-5">
+        <div class="row">
+            <div class="col-md-3" style="background-color: rgb(116, 165, 165);"></div>
+            <div class="col-md-9" style="background-color: azure;">
+                <h1 class="ms-4">Krishantering</h1>
+                <h4 class="ms-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, molestiae ratione? Illo officiis omnis nobis tempora voluptatibus officia saepe accusamus vel beatae veniam?</h4>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-12 col-lg-7">
+                <!--Card starts here-->
+                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
+                    <div class="card-body">
+                        <h5 class="card-title">Rubrik</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                            doloribus.</p>
+                        <a href="#" class="btn btn-dark">Läs mer</a>
+                    </div>
+                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/220/340" alt="xxx">
+                </div>
+                <!--Card ends here-->
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-5">
+                <!--Card starts here-->
+                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
+                    <div class="card-body">
+                        <h5 class="card-title">Rubrik</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                            doloribus.</p>
+                        <a href="#" class="btn btn-dark">Läs mer</a>
+                    </div>
+                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/240/340" alt="xxx">
+                </div>
+                <!--Card ends here-->
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <!--Card starts here-->
+                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
+                    <div class="card-body">
+                        <h5 class="card-title">Rubrik</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                            doloribus.</p>
+                        <a href="#" class="btn btn-dark">Läs mer</a>
+                    </div>
+                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/290/340" alt="xxx">
+                </div>
+                <!--Card ends here-->
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <!--Card starts here-->
+                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
+                    <div class="card-body">
+                        <h5 class="card-title">Rubrik</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                            doloribus.</p>
+                        <a href="#" class="btn btn-dark">Läs mer</a>
+                    </div>
+                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/280/340" alt="xxx">
+                </div>
+                <!--Card ends here-->
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <!--Card starts here-->
+                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
+                    <div class="card-body">
+                        <h5 class="card-title">Rubrik</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                            doloribus.</p>
+                        <a href="#" class="btn btn-dark">Läs mer</a>
+                    </div>
+                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/245/340" alt="xxx">
+                </div>
+                <!--Card ends here-->
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+                <!--Card starts here-->
+                <div class="card mx-3 mx-sm-5 mx-md-3 mx-lg-1 my-4 chrisis_tips_card">
+                    <div class="card-body">
+                        <h5 class="card-title">Rubrik</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                            doloribus.</p>
+                        <a href="#" class="btn btn-dark">Läs mer</a>
+                    </div>
+                    <img class="card-img-bottom card-img-sizing" src="https://picsum.photos/294/340" alt="xxx">
+                </div>
+                <!--Card ends here-->
+            </div>
+        </div>
     </main>
     <!--Footer-->
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
