--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -48,8 +48,9 @@
             <div class="col-sm-9">
                 <h1 class="ms-4 mt-4">Publicera ett inlägg</h1>
                 <hr>
+                <p class="ms-4"> <b>Har du sett eller varit med om något som du vill informera allmänheten om?</b><br>Fyll i nedan formulär så ser vi till att folk får reda på händelsen</p>
                 <!--Form-->
-                <form action="">
+                <form action="" class="form_publish_post">
                     <label for="category">
                         <h3 class="ms-4 mt-2">Kriskategori</h3>
                     </label>
@@ -64,7 +65,7 @@
                             -->
                     </select>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-12 col-lg-5">
                             <label for="city">
                                 <h3 class="ms-4 mt-2">Stad</h3>
                             </label>
@@ -75,7 +76,7 @@
                                 <option value="Karlshamn">Karlshamn</option>
                             </select>
                         </div>
-                        <div class="col-9">
+                        <div class="col-12 col-lg-5">
                             <label for="ZIP-code">
                                 <h3 class="ms-4 mt-2">Postnummer</h3>
                             </label>
