--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,23 @@
 </head>
 
 <body>
+    <div class="container-fluid bg-dark p-4 ">
+        <div class="mx-5 row">
+            <div class="col-8">
+                <h2 class="h1" style ="color: beige;">KrisKlar.se</h2>
+                <p style ="color: beige;">Information för en säkrare vardag</p>
+            </div>
+            <div class="col-4 d-flex justify-content-end align-items-end">
+                <ul>
+                    <li class="">
+                        <a class="nav-link" href="login.html" style ="color: beige;">Logga in</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <!--BootStrap NavBar-->
-    <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body p-3" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container d-md-flex justify-content-end">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -30,9 +45,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="publish_post.html">Publicera inlägg</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="login.html">Logga in</a>
                     </li>
                 </ul>
             </div>
