--- a/views/index.html
+++ b/views/index.html
@@ -14,12 +14,12 @@
 <body>
     <div class="container-fluid bg-dark p-4 ">
         <div class="mx-5 row">
-            <div class="col-8">
+            <div class="col-12 col-md-8 d-flex flex-column align-items-center align-items-md-start">
                 <h2 class="h1" style ="color: beige;">KrisKlar.se</h2>
                 <p style ="color: beige;">Information för en säkrare vardag</p>
             </div>
-            <div class="col-4 d-flex justify-content-end align-items-end">
-                <ul>
+            <div class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end align-items-md-end">
+                <ul class="list-unstyled">
                     <li class="">
                         <a class="nav-link" href="login.html" style ="color: beige;">Logga in</a>
                     </li>
@@ -54,7 +54,7 @@
     <main class="container-md mb-5">
         <div class="row">
             <!--Filters, form-->
-            <aside class="col-md-3" id="aside_index">
+            <aside class="col-12 col-md-3" id="aside_index">
                 <h3 class="mt-4 text-center">Filtrering</h3>
                 <hr>
                 <form action="">
