--- a/views/index.html
+++ b/views/index.html
@@ -109,7 +109,7 @@
 
 
                 <!--Events-->
-                <div class="col-8">
+                <div class="col-12 col-md-8">
                     <h1 class="ms-4 mt-4">Händelser</h1>
                     <!--Post-->
                     <div class="card mx-4">
