--- a/views/index.html
+++ b/views/index.html
@@ -15,13 +15,13 @@
     <div class="container-fluid bg-dark p-4 ">
         <div class="mx-5 row">
             <div class="col-12 col-md-8 d-flex flex-column align-items-center align-items-md-start">
-                <h2 class="h1" style ="color: beige;">KrisKlar.se</h2>
-                <p style ="color: beige;">Information för en säkrare vardag</p>
+                <h2 class="h1" style="color: beige;">KrisKlar.se</h2>
+                <p style="color: beige;">Information för en säkrare vardag</p>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end align-items-md-end">
                 <ul class="list-unstyled">
                     <li class="">
-                        <a class="nav-link" href="login.html" style ="color: beige;">Logga in</a>
+                        <a class="nav-link" href="login.html" style="color: beige;">Logga in</a>
                     </li>
                 </ul>
             </div>
@@ -57,7 +57,7 @@
             <aside class="col-12 col-md-3" id="aside_index">
                 <h3 class="mt-4 text-center">Filtrering</h3>
                 <hr>
-                <form action="">
+                <form action="" class="mb-3">
                     <label class="d-flex justify-content-center text-center" for="city">
                         <h6>Plats</h6>
                     </label>
@@ -83,112 +83,114 @@
                                 Python:
                                 for i in cities print <option value="i">i</option>?
                             -->
-                        </select>
-                        <h4 class="mt-2 text-center">Källa</h4>
-                        <!--Bootstrap checkbox, switch-->
-                        <div class="form-check form-switch d-flex justify-content-center mt-3">
-                            <input class="form-check-input me-2" type="checkbox" id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault"> Polisen.se</label>
-                        </div>
-                        <!--Bootstrap checkbox, switch-->
-                        <div class="form-check form-switch d-flex justify-content-center mt-2">
-                            <input class="form-check-input me-2" type="checkbox" id="flexSwitchCheckDefault">
-                            <label class="form-check-label" for="flexSwitchCheckDefault"> KrisKlar.se</label>
-                        </div>
-                        <div class="d-flex justify-content-center mt-4">
-                            <input type="submit" class="btn btn-dark" value="Hitta händelser">
-                        </div>
-                    </form>
+                    </select>
+                    <h4 class="mt-2 text-center">Källa</h4>
+                    <!--Bootstrap checkbox, switch-->
+                    <div class="form-check form-switch d-flex justify-content-center mt-3">
+                        <input class="form-check-input me-2" type="checkbox" id="flexSwitchCheckDefault">
+                        <label class="form-check-label" for="flexSwitchCheckDefault"> Polisen.se</label>
+                    </div>
+                    <!--Bootstrap checkbox, switch-->
+                    <div class="form-check form-switch d-flex justify-content-center mt-2">
+                        <input class="form-check-input me-2" type="checkbox" id="flexSwitchCheckDefault">
+                        <label class="form-check-label" for="flexSwitchCheckDefault"> KrisKlar.se</label>
+                    </div>
+                    <div class="d-flex justify-content-center mt-4">
+                        <input type="submit" class="btn btn-dark" value="Hitta händelser">
+                    </div>
+                </form>
+                <div class="d-none d-md-flex flex-column">
                     <hr>
                     <h3 class="mt-4 text-center">Karta</h3>
                     <div id="map" class="mx-auto mt-4">
                         <!--API Google Maps-->
                     </div>
-                </aside>
+                </div>
+            </aside>
 
 
 
-                <!--Events-->
-                <div class="col-12 col-md-8">
-                    <h1 class="ms-4 mt-4">Händelser</h1>
-                    <!--Post-->
-                    <div class="card mx-4">
-                        <div class="card-body">
-                            <h5 class="card-title">Krisrubrik</h5>
-                            <div class="row">
-                                <div class="col-lg-7 col-md-8">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
-                                        aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!</p>
-                                </div>
-                                <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                    <img class="img-thumbnail rounded-circle icon-post"
-                                        src="https://picsum.photos/200/300" alt="">
-                                </div>
+            <!--Events-->
+            <div class="col-12 col-md-8">
+                <h1 class="ms-4 mt-4">Händelser</h1>
+                <!--Post-->
+                <div class="card mx-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Krisrubrik</h5>
+                        <div class="row">
+                            <div class="col-lg-7 col-md-8">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
+                                    aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!</p>
                             </div>
-                        </div>
-                        <div class="card-footer small text-muted">
-                            Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                            <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                <img class="img-thumbnail rounded-circle icon-post" src="https://picsum.photos/200/300"
+                                    alt="">
+                            </div>
                         </div>
                     </div>
-                    <!--Post-->
-                    <div class="card mx-4 mt-4">
-                        <div class="card-body">
-                            <h5 class="card-title">Krisrubrik</h5>
-                            <div class="row">
-                                <div class="col-lg-7 col-md-8">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
-                                        dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
-                                </div>
-                                <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                    <img class="img-thumbnail rounded-circle icon-post"
-                                        src="https://picsum.photos/208/300" alt="">
-                                </div>
+                    <div class="card-footer small text-muted">
+                        Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                    </div>
+                </div>
+                <!--Post-->
+                <div class="card mx-4 mt-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Krisrubrik</h5>
+                        <div class="row">
+                            <div class="col-lg-7 col-md-8">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
+                                    dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
                             </div>
-                        </div>
-                        <div class="card-footer small text-muted">
-                            Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                            <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                <img class="img-thumbnail rounded-circle icon-post" src="https://picsum.photos/208/300"
+                                    alt="">
+                            </div>
                         </div>
                     </div>
-                    <!--Post-->
-                    <div class="card mx-4 mt-4">
-                        <div class="card-body">
-                            <h5 class="card-title">Krisrubrik</h5>
-                            <div class="row">
-                                <div class="col-lg-7 col-md-8">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
-                                        dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
-                                </div>
-                                <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                    <img class="img-thumbnail rounded-circle icon-post
-                                        src="https://picsum.photos/218/300" alt="">
-                                </div>
+                    <div class="card-footer small text-muted">
+                        Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                    </div>
+                </div>
+                <!--Post-->
+                <div class="card mx-4 mt-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Krisrubrik</h5>
+                        <div class="row">
+                            <div class="col-lg-7 col-md-8">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
+                                    dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
                             </div>
-                        </div>
-                        <div class="card-footer small text-muted">
-                            Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                            <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                <img class="img-thumbnail rounded-circle icon-post
+                                        src=" https://picsum.photos/218/300" alt="">
+                            </div>
                         </div>
                     </div>
-                    <!--Post-->
-                    <div class="card mx-4 mt-4">
-                        <div class="card-body">
-                            <h5 class="card-title">Krisrubrik</h5>
-                            <div class="row">
-                                <div class="col-lg-7 col-md-8">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
-                                        dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
-                                </div>
-                                <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                    <img class="img-thumbnail rounded-circle icon-post
-                                        src="https://picsum.photos/208/340" alt="">
-                                </div>
+                    <div class="card-footer small text-muted">
+                        Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                    </div>
+                </div>
+                <!--Post-->
+                <div class="card mx-4 mt-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Krisrubrik</h5>
+                        <div class="row">
+                            <div class="col-lg-7 col-md-8">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
+                                    dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
+                            </div>
+                            <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                <img class="img-thumbnail rounded-circle icon-post
+                                        src=" https://picsum.photos/208/340" alt="">
                             </div>
                         </div>
-                        <div class="card-footer small text-muted">
-                            Publicerad: ÅÅ-MM-DD, HH:SS:MM
-                        </div>
+                    </div>
+                    <div class="card-footer small text-muted">
+                        Publicerad: ÅÅ-MM-DD, HH:SS:MM
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </main>
     <!--Footer-->
