--- a/views/chrisis_tips.html
+++ b/views/chrisis_tips.html
@@ -34,6 +34,9 @@
                             href="publish_post.html">Publicera inlägg</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="contact.html">Kontakta oss</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="login.html">Logga in</a>
                     </li>
                 </ul>
@@ -46,7 +49,8 @@
             <div class="col-md-3" style="background-color: rgb(116, 165, 165);"></div>
             <div class="col-md-9" style="background-color: azure;">
                 <h1 class="ms-4">Krishantering</h1>
-                <h4 class="ms-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, molestiae ratione? Illo officiis omnis nobis tempora voluptatibus officia saepe accusamus vel beatae veniam?</h4>
+                <h4 class="ms-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, molestiae ratione? Illo
+                    officiis omnis nobis tempora voluptatibus officia saepe accusamus vel beatae veniam?</h4>
             </div>
         </div>
 
