--- a/views/contact.html
+++ b/views/contact.html
@@ -33,10 +33,10 @@
                             href="publish_post.html">Publicera inlägg</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="contact.html">Kontakta oss</a>
+                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="contact.html">Kontakta oss</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active mx-lg-5 p-md-4 mx-sm-3" aria-current="page" href="login.html">Logga
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="login.html">Logga
                             in</a>
                     </li>
                 </ul>
