--- a/views/index.html
+++ b/views/index.html
@@ -12,21 +12,6 @@
 </head>
 
 <body>
-    <div class="container-fluid bg-dark p-4 ">
-        <div class="mx-5 row">
-            <div class="col-12 col-md-8 d-flex flex-column align-items-center align-items-md-start">
-                <h2 class="h1" style="color: beige;">KrisKlar.se</h2>
-                <p style="color: beige;">Information för en säkrare vardag</p>
-            </div>
-            <div class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end align-items-md-end">
-                <ul class="list-unstyled">
-                    <li class="">
-                        <a class="nav-link" href="login.html" style="color: beige;">Logga in</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
     <!--BootStrap NavBar-->
     <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body" data-bs-theme="dark">
         <div class="container d-md-flex justify-content-end">
@@ -45,6 +30,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="publish_post.html">Publicera inlägg</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="contact.html">Kontakta oss</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="login.html">Logga in</a>
                     </li>
                 </ul>
             </div>
@@ -99,13 +90,6 @@
                         <input type="submit" class="btn btn-dark" value="Hitta händelser">
                     </div>
                 </form>
-                <div class="d-none d-md-flex flex-column">
-                    <hr>
-                    <h3 class="mt-4 text-center">Karta</h3>
-                    <div id="map" class="mx-auto mt-4">
-                        <!--API Google Maps-->
-                    </div>
-                </div>
             </aside>
 
 
