--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -33,6 +33,9 @@
                             href="publish_post.html">Publicera inlägg</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="contact.html">Kontakta oss</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link mx-lg-5 p-md-4 mx-sm-3" href="login.html">Logga in</a>
                     </li>
                 </ul>
@@ -48,7 +51,8 @@
             <div class="col-sm-9">
                 <h1 class="ms-4 mt-4">Publicera ett inlägg</h1>
                 <hr>
-                <p class="ms-4"> <b>Har du sett eller varit med om något som du vill informera allmänheten om?</b><br>Fyll i nedan formulär så ser vi till att folk får reda på händelsen</p>
+                <p class="ms-4"> <b>Har du sett eller varit med om något som du vill informera allmänheten
+                        om?</b><br>Fyll i nedan formulär så ser vi till att folk får reda på händelsen</p>
                 <!--Form-->
                 <form action="" class="form_publish_post">
                     <label for="category">
