--- a/views/chrisis_tips.html
+++ b/views/chrisis_tips.html
@@ -46,11 +46,11 @@
 
     <main class="container-md mt-4 mb-5">
         <div class="row">
-            <div class="col-md-3" style="background-color: rgb(116, 165, 165);"></div>
-            <div class="col-md-9" style="background-color: azure;">
+            <div class="col-md-3 general_light_blue"></div>
+            <div class="col-md-9 py-3">
                 <h1 class="ms-4">Krishantering</h1>
-                <h4 class="ms-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, molestiae ratione? Illo
-                    officiis omnis nobis tempora voluptatibus officia saepe accusamus vel beatae veniam?</h4>
+                <h5 class="ms-4">Här hittar du användbar information om hur du som privatperson bör agera i  olika
+                    typer av nödsituationer, samt vem du kan kontakta i händelse av kris.</h5>
             </div>
         </div>
 
