--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
     <main class="container-md mb-5">
         <div class="row">
             <!--Filters, form-->
-            <aside class="col-12 col-md-3" id="aside_index">
+            <aside class="col-12 col-md-3 general_light_blue">
                 <h3 class="mt-4 text-center">Filtrering</h3>
                 <hr>
                 <form action="" class="mb-3">
