--- a/views/index.html
+++ b/views/index.html
@@ -42,9 +42,11 @@
         </div>
     </nav>
 
-    <main class="container-md mb-5">
+    <!--Wrapper-->
+    <div class="container-md mb-5">
         <div class="row">
-            <!--Filters, form-->
+
+            <!--Aside content-->
             <aside class="col-12 col-md-3 general_light_blue">
                 <h3 class="mt-4 text-center">Filtrering</h3>
                 <hr>
@@ -92,91 +94,102 @@
                 </form>
             </aside>
 
+            <!--Main content-->
+            <main class="col-12 col-md-9">
+                <div class="row">
+                    <!--Filters, form-->
 
 
-            <!--Events-->
-            <div class="col-12 col-md-8">
-                <h1 class="ms-4 mt-4">Händelser</h1>
-                <!--Post-->
-                <div class="card mx-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Krisrubrik</h5>
-                        <div class="row">
-                            <div class="col-lg-7 col-md-8">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
-                                    aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!</p>
+
+                    <!--Events-->
+                    <div>
+                        <h1 class="ms-4 mt-4">Händelser</h1>
+                        <!--Post-->
+                        <div class="card mx-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Krisrubrik</h5>
+                                <div class="row">
+                                    <div class="col-lg-7 col-md-8">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cupiditate
+                                            aperiam accusantium culpa voluptatem quidem deserunt saepe et fugiat autem!
+                                        </p>
+                                    </div>
+                                    <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                        <img class="img-thumbnail rounded-circle icon-post"
+                                            src="https://picsum.photos/200/300" alt="">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                <img class="img-thumbnail rounded-circle icon-post" src="https://picsum.photos/200/300"
-                                    alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-footer small text-muted">
-                        Publicerad: ÅÅ-MM-DD, HH:SS:MM
-                    </div>
-                </div>
-                <!--Post-->
-                <div class="card mx-4 mt-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Krisrubrik</h5>
-                        <div class="row">
-                            <div class="col-lg-7 col-md-8">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
-                                    dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
-                            </div>
-                            <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                <img class="img-thumbnail rounded-circle icon-post" src="https://picsum.photos/208/300"
-                                    alt="">
+                            <div class="card-footer small text-muted">
+                                Publicerad: ÅÅ-MM-DD, HH:SS:MM
                             </div>
                         </div>
-                    </div>
-                    <div class="card-footer small text-muted">
-                        Publicerad: ÅÅ-MM-DD, HH:SS:MM
-                    </div>
-                </div>
-                <!--Post-->
-                <div class="card mx-4 mt-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Krisrubrik</h5>
-                        <div class="row">
-                            <div class="col-lg-7 col-md-8">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
-                                    dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
+                        <!--Post-->
+                        <div class="card mx-4 mt-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Krisrubrik</h5>
+                                <div class="row">
+                                    <div class="col-lg-7 col-md-8">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia
+                                            asperiores
+                                            dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
+                                    </div>
+                                    <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                        <img class="img-thumbnail rounded-circle icon-post"
+                                            src="https://picsum.photos/208/300" alt="">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                <img class="img-thumbnail rounded-circle icon-post
+                            <div class="card-footer small text-muted">
+                                Publicerad: ÅÅ-MM-DD, HH:SS:MM
+                            </div>
+                        </div>
+                        <!--Post-->
+                        <div class="card mx-4 mt-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Krisrubrik</h5>
+                                <div class="row">
+                                    <div class="col-lg-7 col-md-8">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia
+                                            asperiores
+                                            dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
+                                    </div>
+                                    <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                        <img class="img-thumbnail rounded-circle icon-post
                                         src=" https://picsum.photos/218/300" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-footer small text-muted">
+                                Publicerad: ÅÅ-MM-DD, HH:SS:MM
                             </div>
                         </div>
-                    </div>
-                    <div class="card-footer small text-muted">
-                        Publicerad: ÅÅ-MM-DD, HH:SS:MM
-                    </div>
-                </div>
-                <!--Post-->
-                <div class="card mx-4 mt-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Krisrubrik</h5>
-                        <div class="row">
-                            <div class="col-lg-7 col-md-8">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia asperiores
-                                    dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
-                            </div>
-                            <div class="col-lg-5 col-md-4 d-flex justify-content-center">
-                                <img class="img-thumbnail rounded-circle icon-post
+                        <!--Post-->
+                        <div class="card mx-4 mt-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Krisrubrik</h5>
+                                <div class="row">
+                                    <div class="col-lg-7 col-md-8">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde officia
+                                            asperiores
+                                            dolorum minus totam tenetur ut sapiente, et veniam debitis.</p>
+                                    </div>
+                                    <div class="col-lg-5 col-md-4 d-flex justify-content-center">
+                                        <img class="img-thumbnail rounded-circle icon-post
                                         src=" https://picsum.photos/208/340" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-footer small text-muted">
+                                Publicerad: ÅÅ-MM-DD, HH:SS:MM
                             </div>
                         </div>
                     </div>
-                    <div class="card-footer small text-muted">
-                        Publicerad: ÅÅ-MM-DD, HH:SS:MM
-                    </div>
                 </div>
-            </div>
         </div>
-        </div>
+    </div>
     </main>
+    </div>
     <!--Footer-->
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
         <div class="container-fluid">
