--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,5 +1,6 @@
 body {
     background-color: #fffafa;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .icon-post {
@@ -28,7 +29,7 @@ body {
 }
 
 .card-img-sizing {
-    height:20vh;
+    height: 20vh;
     object-fit: cover;
 }
 
