--- a/views/chrisis_tips.html
+++ b/views/chrisis_tips.html
@@ -45,7 +45,7 @@
     </nav>
 
     <main class="container-md mt-4 mb-5">
-        <div class="row">
+        <div class="row border-bottom">
             <div class="col-md-3 general_light_blue"></div>
             <div class="col-md-9 py-3">
                 <h1 class="ms-4">Krishantering</h1>
