--- a/views/publish_post.html
+++ b/views/publish_post.html
@@ -53,7 +53,7 @@
                 <p class="ms-4"> <b>Har du sett eller varit med om något som du vill informera allmänheten
                         om?</b><br>Fyll i nedan formulär så ser vi till att folk får reda på händelsen</p>
                 <!--Form-->
-                <form action="" class="form_publish_post">
+                <form action="/Ny" method="post" class="form_publish_post">
                     <label for="category">
                         <h3 class="ms-4 mt-2">Kriskategori</h3>
                     </label>
