Skapade Log in sidan
log in sidan

--- a/views/login.html
+++ b/views/login.html
@@ -42,7 +42,33 @@
         </div>
     </nav>
 
-    <main class="container-md">
+    <main>
+        <div class="container-login">
+        <div class="container-lg">
+         <form action="">
+            <h1> Login</h1>
+            <div class="Input-box">
+                <input type="text" placeholder="Användarnamn" required>
+                <i class='bx bx-user'></i>
+            </div>
+            <div class="Input-box">
+                <input type="password" placeholder="Lösenord" required>
+                <i class='bx bxs-lock'></i>
+            </div>
+
+            <div class="remember-forgot">
+                <label><input type="checkbox">Kom ihåg mig!</label>
+                <a href="#"> Glömt lösenord?</a>
+            </div>
+
+            <button type="submit" class="butn">Logga in</button>
+
+            <div class="register-link">
+                <p> Har du inget konto?<a href="#"> Registrera dig här!</a></p>
+            </div>
+         </form>
+        </div>
+        </div>
     </main>
     <!--Footer-->
     <footer class="footer bg-dark p-3" data-bs-theme="dark">
