--- a/views/index.html
+++ b/views/index.html
@@ -51,32 +51,56 @@
                 <h3 class="mt-4 text-center">Filtrering</h3>
                 <hr>
                 <form action="" class="mb-3">
-                    <label class="d-flex justify-content-center text-center" for="city">
-                        <h6>Plats</h6>
-                    </label>
-                    <select name="city" id="city" class="form-select widht-select mx-auto mt-0 mb-3">
-                        <option value="none" selected>Välj...</option>
-                        <option value="Malmö">Malmö</option>
-                        <option value="Lund">Lund</option>
-                        <option value="Karlshamn">Karlshamn</option>
-                        <!--
-                                Python:
-                                for i in cities print <option value="i">i</option>?
-                            -->
-                    </select>
-                    <label class="d-flex justify-content-center text-center" for="category">
+
+                    <!--Categories-->
+                    <label class="d-flex justify-content-center text-center" for="category" class="form-label">
                         <h6>Riskkategori</h6>
                     </label>
-                    <select name="category" id="category" class="form-select widht-select mx-auto mt-2 mb-3">
-                        <option value="none" selected>Välj...</option>
-                        <option value="Fire">Brand</option>
-                        <option value="Shooting">Skottlossning</option>
-                        <option value="Smoke">Rökutveckling</option>
-                        <!--
+                    <input class="form-control widht-select mx-auto mt-2 mb-3" list="categoryOptions" id="category"
+                        name="category" placeholder="Sök...">
+                    <datalist id="categoryOptions">
+                        <option value="Brand">
+                        <option value="Skottlossning">
+                        <option value="Rökutveckling">
+                            <!--
                                 Python:
                                 for i in cities print <option value="i">i</option>?
                             -->
-                    </select>
+                    </datalist>
+
+                    <!--City-->
+                    <label class="d-flex justify-content-center text-center" for="city" class="form-label">
+                        <h6>Stad</h6>
+                    </label>
+                    <input class="form-control widht-select mx-auto mt-2 mb-3" list="cityOptions" id="city" name="city"
+                        placeholder="Sök...">
+                    <datalist id="cityOptions">
+                        <option value="Malmö">
+                        <option value="Lund">
+                        <option value="Karlshamn">
+                            <!--
+                                Python:
+                                for i in cities print <option value="i">i</option>?
+                            -->
+                    </datalist>
+
+
+                    <!--Zip-code-->
+                    <label class="d-flex justify-content-center text-center" for="ZIP-code" class="form-label">
+                        <h6>Postnummer</h6>
+                    </label>
+                    <input class="form-control widht-select mx-auto mt-2 mb-3" list="zipOptions" id="ZIP-code"
+                        name="ZIP-code" placeholder="Sök...">
+                    <datalist id="zipOptions">
+                        <option value="21110">
+                        <option value="21111">
+                        <option value="21112">
+                            <!--
+                                Python:
+                                for i in cities print <option value="i">i</option>?
+                            -->
+                    </datalist>
+
                     <h4 class="mt-2 text-center">Källa</h4>
                     <!--Bootstrap checkbox, switch-->
                     <div class="form-check form-switch d-flex justify-content-center mt-3">
